log4j2 property file is implemented

--- a/log-producer/src/main/resources/log4j2.properties
+++ b/log-producer/src/main/resources/log4j2.properties
@@ -24,14 +24,14 @@ appender.async.appenderRef.type=AppenderRef
 appender.async.appenderRef.ref=Kafka
 
 
-rootLogger.level=INFO
+rootLogger.level=info
 rootLogger.appenderRefs = console,kafka
 rootLogger.appenderRef.kafka.ref=Kafka
 rootLogger.appenderRef.console.ref=stdout
 
 loggers = kafka
 logger.kafka.name = org.apache.kafka
-logger.kafka.level = WARN
+logger.kafka.level = warn
 
 
 
